--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@axa-fr/react-oidc-context": "3.1.6",
+    "@bit/totalsoft_oss.react-mui.icon-card": "^2.9.61",
     "@bit/totalsoft_oss.react-mui.kit.core": "^2.9.55",
     "@bit/totalsoft_oss.react-mui.styles": "^2.9.55",
     "@bit/totalsoft_oss.react-mui.themes.blue-theme": "^2.9.55",
     "@bit/totalsoft_oss.react-mui.themes.default-theme": "^2.9.55",
     "@bit/totalsoft_oss.react-mui.themes.green-theme": "^2.9.55",
+    "@bit/totalsoft_oss.react-mui.themes.light-blue-theme": "^2.9.55",
     "@bit/totalsoft_oss.react-mui.themes.orange-theme": "^2.9.55",
     "@bit/totalsoft_oss.react-mui.themes.red-theme": "^2.9.55",
     "@bit/totalsoft_oss.react-mui.themes.vivid-orange-theme": "^2.9.55",
-    "@bit/totalsoft_oss.react-mui.themes.light-blue-theme": "^2.9.55",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@totalsoft/change-tracking-react": "^5.0.22",
@@ -64,9 +65,9 @@
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-pipeline-operator": "^7.16.7",
     "@babel/core": "^7.16.7",
     "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-proposal-pipeline-operator": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
     "cross-env": "^7.0.3",
     "customize-cra": "^1.0.0",
