--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "apollo-link-mock": "^1.0.1",
     "apollo-upload-client": "^17.0.0",
     "classnames": "^2.3.1",
+    "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "graphql": "^16.2.0",
     "graphql-ws": "^5.6.4",
